객체지향 설계 오브젝트 일관성 있는 협력 소스